# cv-builder

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.specs/: 1-cv-builder-agents-architecture.md  2-agent-implementation-details.md  3-google-drive-api-integration.md  4-codex-sdk-backend-and-test-strategy.md
codex_bridge/: package-lock.json  package.json  runner.mjs
src/: __init__.py  cli.py  models.py  orchestrator.py
src/agents/: __init__.py  base.py  config_reader.py  cv_generator.py  doc_formatter.py  job_analyzer.py  materials_gatherer.py
src/google_drive/: __init__.py  api.py  auth.py  client.py
src/llm/: __init__.py  client.py  config.py  factory.py  litellm_runner.py
src/llm/backends/: __init__.py  base.py  codex_backend.py  litellm_backend.py
tests/: __init__.py  conftest.py  test_codex_backend.py  test_config_reader.py  test_cv_generator.py  test_doc_formatter.py  test_google_drive_api.py  test_google_drive_auth.py  test_google_drive_client.py  test_job_analyzer.py  test_litellm_backend.py  test_llm_config.py  test_llm_factory.py  test_materials_gatherer.py  test_orchestrator.py
tests/fixtures/: google_careers_job_posting.html  sample_config.yaml  sample_cv_materials.json  sample_job_posting.txt
